# Hydrostats

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .travis.yml  LICENSE.txt  MANIFEST  Metrics.py  README.md  pyproject.toml  requirements-docs.txt  setup.py
.github/workflows/: ci.yml  publish.yml
Examples/: Overview.ipynb
Sample_data/: West Rapti at Kusum_River Water Level Inst_2017-08-05_2017-08-15_Hourly.csv  West_Rapti_Kusum_River_Discharge_2017-08-05_2017-08-15_Hourly.csv  asaraghat_karnali_interim_data.csv  kaligandaki_ansing_ECMWF_data.csv  kaligandaki_ansing_interim_data.csv  south_asia_historical_20170809_01-51.csv
Sample_data/Bangladesh_Training_Data/: Interpolated_Shaistaganj_SW158.1_Khowai.csv  Q-310119-Bangladesh-Historical.xlsx  historic_streamflow_south_asia_mainland_62136.csv
Sample_data/Bangladesh_Training_Data/Binary_Metrics_Demo/: Observed.csv  Ten_Day_Ensemble_Forecasts.csv
Sample_data/Forecast_Skill/: Ensemble_Forecast_10_Day.csv  Ensemble_Forecasts_1_Day.csv  Merged_Forecast_DataFrame_South_Asia_55234.csv  Observed_Data_10_Day.csv  Observed_Data_1_Day.csv  Persistence_Forecast_10_Day.csv  Persistence_Forecast_1_Day.csv
Sample_data/GLOFAS_Data/: magdalena-calamar_ECMWF_data.csv  magdalena-la_magdalena_ECMWF_data.csv  orinoco-san_jose_del_guaviare_ECMWF_data.csv
Sample_data/sfpt_data/: magdalena-calamar_interim_data.csv  magdalena-la_magdalena_interim_data.csv  orinoco-san_jose_del_guaviare_interim_data.csv
docs/: Analysis.rst  Installation.rst  Makefile  Metrics.rst  Preprocessing.rst  README.md  Visualization.rst  build_docs.sh  change_log.rst  conf.py  contribute.rst  ens_metrics.rst  generate_reference_table.py  index.rst  latex_for_all_metrics.py  matplotlib_linestyles.rst  mkdsupport.py  plot_types.rst  ref_table.rst  requirements.txt  timezones.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_static/: documentation_options.js
docs/_build/html/api/: hydrostats.analyze.make_table.html  hydrostats.analyze.time_lag.html  hydrostats.data.daily_average.html  hydrostats.data.daily_std_dev.html  hydrostats.data.daily_std_error.html  hydrostats.data.merge_data.html  hydrostats.data.monthly_average.html  hydrostats.data.monthly_std_dev.html  hydrostats.data.monthly_std_error.html  hydrostats.data.remove_nan_df.html  hydrostats.data.seasonal_period.html  hydrostats.metrics.acc.html  hydrostats.metrics.d.html  hydrostats.metrics.d1.html  (+72 more)
docs/api/: hydrostats.analyze.time_lag.rst  hydrostats.data.daily_average.rst  hydrostats.data.daily_std_dev.rst  hydrostats.data.daily_std_error.rst  hydrostats.metrics.acc.rst  hydrostats.metrics.d.rst  hydrostats.metrics.d1_p.rst  hydrostats.metrics.dr.rst  hydrostats.metrics.h10_mhe.rst  hydrostats.metrics.h2_ahe.rst  hydrostats.metrics.h2_mhe.rst  hydrostats.metrics.h3_ahe.rst  hydrostats.metrics.h4_mhe.rst  hydrostats.metrics.h5_mhe.rst  hydrostats.metrics.h6_ahe.rst  hydrostats.metrics.h6_mhe.rst  hydrostats.metrics.h6_rmshe.rst  hydrostats.metrics.h7_ahe.rst  hydrostats.metrics.h7_mhe.rst  hydrostats.metrics.h8_mhe.rst  hydrostats.metrics.h8_rmshe.rst  hydrostats.metrics.kge_2009.rst  hydrostats.metrics.lm_index.rst  hydrostats.metrics.male.rst  hydrostats.metrics.mape.rst  hydrostats.metrics.mle.rst  hydrostats.metrics.msle.rst  hydrostats.metrics.ned.rst  hydrostats.metrics.nrmse_iqr.rst  hydrostats.metrics.nrmse_mean.rst  hydrostats.metrics.nrmse_range.rst  hydrostats.metrics.rmse.rst  hydrostats.metrics.smape2.rst  hydrostats.metrics.ve.rst  hydrostats.visual.qqplot.rst  hydrostats.visual.scatter.rst
hydrostats/: .travis.yml  HydroErr.py  __init__.py  analyze.py  data.py  ens_metrics.py  hydrostats  hydrostats.py  metrics.py  visual.py
hydrostats/tests/: .coveragerc  test_metrics.py  tests.py
hydrostats/tests/Comparison_Files/: daily_average.csv  daily_std_dev.csv  daily_std_error.csv  monthly_average.csv  monthly_std_dev.csv  monthly_std_error.csv  summary_df.csv
hydrostats/tests/Files_for_tests/: ens_bin.npy  ens_bin.npz  ensemble_array.npz  ensemble_array_bad_data.npz  expected_brier.npy  expected_brier_bin.npy  expected_brier_diff_thresh.npy  expected_crps.npy  merged_df.pkl  obs_bin.npy  obs_bin.npz  observed_array.npz  observed_array_bad_data.npz
src/hydrostats/: __init__.py  analyze.py  data.py  ens_metrics.py  metrics.py  typing_aliases.py  visual.py
tests/: conftest.py  test_analysis.py  test_data.py  test_ens_metrics.py  test_metrics.py  test_visual.py  tests.py
tests/Comparison_Files/: daily_std_dev.csv  daily_std_error.csv  summary_df.csv  time_lag_df.csv
tests/Files_for_tests/: Julian_Observed.csv  Julian_Simulated.csv  ens_bin.npy  ensemble_array_bad_data.npz  expected_brier_bin.npy  expected_brier_diff_thresh.npy  expected_crps.npy  merged_df.pkl  observed_array.npz  observed_array_bad_data.npz
(+56 files in other folders)
