[project]
name = "hydrostats"
version = "1.0.0"
description = "Tools for use in comparison studies, specifically for use in the field of hydrology"
readme = "README.md"
authors = [
    { name = "Wade Roberts", email = "wade.a.roberts@protonmail.com" }
]
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
  "hydrology",
  "error",
  "metrics",
  "comparison",
  "statistics",
  "forecast",
  "observed"
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Hydrology"
]
dependencies = [
    "hydroerr>=1.24",
    "matplotlib~=3.10.7",
    "numba~=0.62.1",
    "numpy~=2.2.6",
    "pandas~=2.3.3",
    "scipy~=1.15.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/BYU-Hydroinformatics/Hydrostats"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.format]
docstring-code-format = true
